corregidos error de boton de atrás

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <body>
     <header>
       <section class="header">
-        <a class="header__botonatras" ref=""
-          ><img src="./img/Vector.svg" alt=""
+        <a href="#"
+          ><img class="header__botonatras" src="./img/Vector.svg" alt=""
         /></a>
-<article class="header__titulo">
-        <h1>Inmobiliaria</h1>
-    </article>  
+
+        <h1 class="header__titulo">Inmobiliaria</h1>
+ 
     </section>
-    </header>
+
+</header>
 <!-- MAIN -->
     <main>
       <h2>Información</h2>
@@ -85,7 +86,7 @@
       <h4>Descripción de...</h4>
 
       <section class="main__boton">
-        <a href="">Siguiente</a>
+        <a href="#">Siguiente</a>
       </section>
     </main>
   </body>
